# waypoints

./: CMakeLists.txt  README.md  package.xml  plugin_description.xml
files/: pathCafe_gr.txt  pathCafe_wp.txt
include/: waypointPanel.h  waypointServer.h  waypointsTool.h
msg/: waypointArray.msg  waypoint_group.msg
resource/: waypointPanel.ui
src/: debug_waypoints.cpp  waypointPanel.cpp  waypointServer.cpp  waypointsTool.cpp  waypoints_server.cpp  waypoints_tool.cpp
srv/: Delete_Wp.srv  Groups_Wp.srv  Load_Wp.srv  Run_Wp.srv  Save_Wp.srv  Stop_Wp.srv  Wp_2_Group.srv
