<?xml version="1.0"?>
<package format="2">
  <name>waypoints</name>
  <version>0.0.0</version>
  <description>The waypoints server package</description>
  <maintainer email="acevedos.alejandro@gmail.com">Alejandro Acevedo</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rviz</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>qt_build</build_depend>
  <build_depend>message_generation</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rviz</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>qt_build</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>


  <export>
      <rviz plugin="${prefix}/plugin_description.xml"/>
  </export>
</package>
